--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,32 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Homepage | Realto</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Realto" name="description">
-  <meta content="favethemes" name="author">
-
-  <!-- CSS Styles  -->
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
-  <link href="css/colors.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-
-  <!-- Favicon and touch icons  -->
-  <link href="ico/apple-touch-icon-144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144">
-  <link href="ico/apple-touch-icon-114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-  <link href="ico/apple-touch-icon-72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-  <link href="ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon-precomposed">
-  <link href="ico/favicon.png" rel="shortcut icon">
-
-  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-  <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <![endif]-->
-</head>
-<body>
 <!-- begin header -->
 <header>
   <div class="navbar navbar-inverse navbar-static-top">
@@ -40,50 +11,7 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="active"><a href="index.html"><i class="icon-home"></i></a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Properties <i class="icon-caret-down"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="properties-grid-layout-1.html" title="Properties Grid Layout 1">Properties
-                  Grid Layout 1</a></li>
-                <li><a href="properties-grid-layout-2.html" title="Properties Grid Layout 2">Properties
-                  Grid Layout 2</a></li>
-                <li><a href="properties-list-layout-1.html" title="Properties List Layout">Properties
-                  List Layout 1</a></li>
-                <li><a href="properties-list-layout-2.html" title="Properties List Layout">Properties
-                  List Layout 2</a></li>
-                <li><a href="property-page.html" title="Property Page">Property Page</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" title="Agents">Agents<i class="icon-caret-down"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="agents.html" title="All Agents">All Agents</a></li>
-                <li><a href="agent-profile.html" title="Agent Profile">Agent Profile</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Blog<i class="icon-caret-down"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="blog-layout-1.html" title="Blog Layout 1">Blog Layout 1</a></li>
-                <li><a href="blog-layout-2.html" title="Blog Layout 2">Blog Layout 2</a></li>
-                <li><a href="blog-layout-3.html" title="Blog Layout 3">Blog Layout 3</a></li>
-                <li><a href="blog-layout-4.html" title="Blog Layout 4">Blog Layout 4</a></li>
-                <li><a href="single-post.html" title="Single Blog Post">Single Blog Post</a></li>
-              </ul>
-            </li>
-            <li><a href="financing.html" title="Financing">Financing</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Features<i class="icon-caret-down"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="typography.html" title="Typography">Typography</a></li>
-                <li><a href="tabs-and-toggle.html" title="Tabs and Toggle">Tabs and Toggle</a></li>
-                <li><a href="buttons-and-boxes.html" title="Buttons and Boxes">Buttons and Boxes</a></li>
-                <li><a href="columns.html" title="Columns">Columns</a></li>
-                <li><a href="icons.html" title="Icons">Icons</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Pages <i class="icon-caret-down"></i></a>
-              <ul class="dropdown-menu">
-                <li><a href="page-with-sidebar.html" title="Sidebar Page">Sidebar Page</a></li>
-                <li><a href="wide-page.html" title="Homepage 3">Wide Page</a></li>
-              </ul>
-            </li>
+            <li><a href="contact.html" title="About us">About us</a></li>
             <li><a href="contact.html" title="Contact us">Contact us</a></li>
           </ul>
         </div>
@@ -95,8 +23,8 @@
     <div class="container">
       <div class="row">
         <div class="span8">
-          <a class="brand" href="index.html"><span class="logo-text">Realto</span></a>
-          <span class="tag-line hidden-phone">Your tag line here</span>
+          <a class="brand" href="index.html"><span class="logo-text">Places</span></a>
+          <span class="tag-line hidden-phone">Friendly Places reviews</span>
         </div>
         <div class="span4">
           <div class="phone-number pull-right"><i class="icon-phone"></i> Call Us: <strong>1 (800) 765 4321</strong></div><!--/phone-number-->
@@ -612,13 +540,3 @@
     </div>
   </div>
 </footer>
-
-<!-- end footer -->
-
-<!-- Javascript  -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.placeholder.js"></script>
-<script src="js/custom.js"></script>
-</body>
-</html>
