--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
 
   <body>
   <%= render 'layouts/header' %>
+  <div class="container">
+    <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>">
+          <a href="#" data-dismiss="alert" class="close">×</a>
+          <ul>
+            <li>
+              <%= value %>
+            </li>
+          </ul>
+        </div>
+    <% end %>
+  </div>
     <%= yield %>
   <%= render 'layouts/footer' %>
   </body>
