--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -19,69 +19,36 @@
         <div class="clearfix">
           <div class="clearfix padding30">
             <h2 class="prop-title pull-left margin0"><%= @place.name %></h2>
-            <span class="prop-price pull-right serif italic">$ 2,500,000</span>
+            <span class="prop-price pull-right serif italic">****</span>
           </div>
           <div class="clearfix padding030 row-fluid">
             <ul class="more-info pull-left span6">
-              <li class="info-label clearfix"><span class="pull-left">Bedrooms:</span>
-                <span class="qty pull-right">4</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Bathrooms:</span>
-                <span class="qty pull-right">2</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Property
-                                        type:</span>
-                <span class="qty pull-right">Condo</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Square
-                                        feet:</span>
-                <span class="qty pull-right">1,700 sqft</span></li>
+              <li class="info-label clearfix"><span class="pull-left">Category:</span>
+                <span class="qty pull-right">Hotel</span></li>
+              <li class="info-label clearfix"><span class="pull-left">Website:</span>
+                <span class="qty pull-right">www.place.com</span></li>
+              <li class="info-label clearfix"><span class="pull-left">Description:</span>
+                <span class="qty pull-right"><%= @place.description %></span></li>
             </ul>
             <ul class="more-info pull-right span6">
-              <li class="info-label clearfix"><span class="pull-left">Year:</span>
-                <span class="qty pull-right">2010</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Listing
-                                        type:</span>
-                <span class="qty pull-right">For Sale</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Parking:</span>
-                <span class="qty pull-right">Assigned</span></li>
-              <li class="info-label clearfix"><span class="pull-left">Neighborhood:</span>
-                <span class="qty pull-right">Oceanfront</span></li>
+              <li class="info-label clearfix"><span class="pull-left">Phone:</span>
+                <span class="qty pull-right"><%= @place.phone %></span></li>
+              <li class="info-label clearfix"><span class="pull-left">Email:</span>
+                <span class="qty pull-right"><%= @place.email %></span></li>
+              <li class="info-label clearfix"><span class="pull-left">Address:</span>
+                <span class="qty pull-right">
+                  <%= @place.address1 %>
+                  <%= @place.address2 %>
+                  <%= @place.city %>
+                  <%= @place.state %>
+                  <%= @place.zipcode %>
+                </span>
+              </li>
             </ul>
           </div>
           <div class="clearfix padding30">
-            <h3>Property Description</h3>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
-              fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-              ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-              egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-              leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
-              erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean
-              fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci,
-              sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar
-              facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor
-              neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat
-              volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis
-              luctus, metus</p>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
-              fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-              ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-              egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-              leo.</p>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
-              fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-              ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-              egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-              leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum
-              erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean
-              fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci,
-              sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar
-              facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor
-              neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat
-              volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis
-              luctus, metus</p>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada
-              fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae,
-              ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam
-              egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
-              leo.</p>
+            <h3>Reviews</h3>
+            <p>No reviews yet</p>
           </div>
         </div>
       </div>
