Index Categories on Places

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -24,7 +24,7 @@
           <div class="clearfix padding030 row-fluid">
             <ul class="more-info pull-left span6">
               <li class="info-label clearfix"><span class="pull-left">Category:</span>
-                <span class="qty pull-right">Hotel</span></li>
+                <span class="qty pull-right"><%= @place.category.name %></span></li>
               <li class="info-label clearfix"><span class="pull-left">Website:</span>
                 <span class="qty pull-right">www.place.com</span></li>
               <li class="info-label clearfix"><span class="pull-left">Description:</span>
