--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -5,6 +5,9 @@
         <div class="padding30">
           <h2 class="page-title">Write a Review</h2>
           <%=  form_for @place do |f| %>
+              <%= f.label :category_id %>
+              <%= f.select :category_id, Category.all.map{ |f| [f.name, f.id] } %>
+
               <%= f.label :name %>
               <%= f.text_field :name %>
 
