--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,14 @@
   </div>
     <%= yield %>
   <%= render 'layouts/footer' %>
+  <script>
+    $('.star-rating').raty({
+        path: '/assets',
+        readOnly: true,
+        score: function () {
+            return $(this).attr('data-score');
+        }
+    });
+  </script>
   </body>
 </html>
