--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -19,7 +19,7 @@
         <div class="clearfix">
           <div class="clearfix padding30">
             <h2 class="prop-title pull-left margin0"><%= @place.name %></h2>
-            <span class="prop-price pull-right serif italic">****</span>
+            <span class="prop-price pull-right serif italic star-rating" data-score=<%= @avg_rating %>></span>
           </div>
           <div class="clearfix padding030 row-fluid">
             <ul class="more-info pull-left span6">
@@ -50,7 +50,6 @@
             <%= link_to "Write a review", new_place_review_path(@place), class: "btn btn-small btn-realto" %>
             <h3>Reviews</h3>
             <% @reviews.each do |review| %>
-              <%= review.rating %><br>
               <%= review.comment %><br>
             <% end %>
             <p>No reviews yet</p>
