--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [@place, @review] do |f| %>
-    <%= f.number_field :rating %><br />
+    <%= f.number_field :rating, value: 1, min: 1, max: 5 %><br />
     <%= f.text_area :comment %><br />
     <%= f.submit class: "btn span2 btn-realto-form btn-large" %>
 <% end %>
