--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -49,10 +49,31 @@
           <div class="clearfix padding30">
             <%= link_to "Write a review", new_place_review_path(@place), class: "btn btn-small btn-realto" %>
             <h3>Reviews</h3>
-            <% @reviews.each do |review| %>
-              <%= review.comment %><br>
-            <% end %>
-            <p>No reviews yet</p>
+            <% if @reviews.blank?  %>
+                <p>No reviews yet</p>
+            <% else %>
+                <table class="table">
+                  <thead>
+                  <tr>
+                    <th class="col-mid-3"></th>
+                    <th class="col-mid-9"></th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <% @reviews.each do |review| %>
+                      <tr>
+                        <td>
+                          <h5><%= "#{review.user.email}" %></h5>
+                        </td>
+                        <td>
+                          <div class="clearfix star-rating" data-score=<%= review.rating %>></div>
+                          <%= review.comment %><br>
+                        </td>
+                      </tr>
+                  <% end %>
+                  </tbody>
+                </table>
+            <% end  %>
           </div>
         </div>
       </div>
