--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -12,67 +12,15 @@
                 This template is appropriate for Real Estate Company, who need to do their business online via websites.</p>
                 <%= link_to "Write a Review", new_place_path, class: "btn btn-large btn-realto span3 header-cta" %>
               </div>
-              <div class="span4">
+              <div class="span4" style="padding-bottom: 100px">
                 <div class="search-form">
-                  <p>Find your new home</p>
-                  <form action="#" class="row-fluid" method="post">
-                    <select class="span12 select" name="type">
-                      <option>Location</option>
-                      <option value="#">New York</option>
-                      <option value="#">Los Angeles</option>
-                      <option value="#">Washington</option>
-                      <option value="#">Chicago</option>
-                      <option value="#">Miami</option>
-                    </select>
-                    <select class="span12 select" name="type">
-                      <option>Property Type</option>
-                      <option value="#">Any</option>
-                      <option value="#">Single Family Home</option>
-                      <option value="#">Condo</option>
-                      <option value="#">Apartment</option>
-                      <option value="#">Loft</option>
-                    </select>
-                    <select class="span6 select pull-left" name="beds">
-                      <option>Beds</option>
-                      <option value="#">1+ Beds</option>
-                      <option value="#">2+ Beds</option>
-                      <option value="#">3+ Beds</option>
-                      <option value="#">4+ Beds</option>
-                      <option value="#">5+ Beds</option>
-                    </select>
-                    <select class="span6 select pull-right" name="baths">
-                      <option>Baths</option>
-                      <option value="#">1+ Baths</option>
-                      <option value="#">2+ Baths</option>
-                      <option value="#">3+ Baths</option>
-                      <option value="#">4+ Baths</option>
-                      <option value="#">5+ Baths</option>
-                    </select>
-                    <select class="span12 select clearfix" name="status">
-                      <option>Select Status</option>
-                      <option value="#">For Rent</option>
-                      <option value="#">For Sale</option>
-                    </select>
-                    <select class="span6 select pull-left" name="price-from">
-                      <option>Price from</option>
-                      <option value="#">from $100.000</option>
-                      <option value="#">from $200.000</option>
-                      <option value="#">from $300.000</option>
-                      <option value="#">from $400.000</option>
-                      <option value="#">from $500.000</option>
-                    </select>
-                    <select class="span6 select pull-right" name="price-to">
-                      <option>Price to</option>
-                      <option value="#">to $100.000</option>
-                      <option value="#">to $200.000</option>
-                      <option value="#">to $300.000</option>
-                      <option value="#">to $400.000</option>
-                      <option value="#">to $500.000</option>
-                    </select>
-                    <div class="clearfix">
-                      <button class="btn pull-right span6 btn-realto-form btn-large" type="submit">Search</button>
-                    </div>
-                  </form>
+                  <p>Find your place</p>
+                  <%= form_tag search_places_path, method: :get do |f| %>
+                      <%= text_field_tag :search, nil, placeholder: "palace, italian, beer, etc." %>
+                      <%= text_field_tag :location, nil, placeholder: "denver, paris, etc." %>
+                      <%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}) %>
+                      <%= submit_tag 'Search', class: "btn btn-realto span2" %>
+                  <% end %>
                 </div>
                 <!-- .search-form -->
               </div>
