--- a/app/views/places/search.html.erb
+++ b/app/views/places/search.html.erb
@@ -1,3 +1,54 @@
-<% @places.each do |place| %>
-  <%= place.name %>
-<% end  %>
+<div class="container page-content">
+  <div class="row">
+    <div class="span12">
+      <div class="row">
+        <% if @places.blank? %>
+          <h2>Couldn't find a place with your search criteria!</h2>
+        <% else %>
+            <% @places.each do |place|  %>
+              <div class="span4 box-container">
+                <div class="holder">
+                  <a class="overlay" href="#" title="property title">
+                    <span class="more"></span>
+                    <img alt="image" class="media-object" src="http://placehold.it/370x210">
+                  </a>
+                  <span class="prop-tag">For Sale</span>
+                  <div class="prop-info">
+                    <h3 class="prop-title"><%= link_to place.name, place_path(place) %></h3>
+                    <ul class="more-info clearfix">
+                      <li class="info-label clearfix"><span class="pull-left">Phone:</span>
+                        <span class="qty pull-right"><%= place.phone %></span></li>
+                      <li class="info-label clearfix"><span class="pull-left">Location:</span>
+                        <span class="qty pull-right"><%= place.city.capitalize %>, <%= place.state.upcase %></span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+        <% end %>
+      </div>
+      <!-- .row -->
+    </div>
+    <!-- .span12 -->
+  </div>
+  <!-- .row -->
+</div>
+<!-- .container -->
+<div class="container">
+  <div class="row">
+    <div class="span12 box-container">
+      <div class="row adv-message clearfix">
+        <div class="pull-left span7">
+          <p class="upper-line serif italic">Realto xHTML/CSS Template is The
+            Best Solution To Sell House Online</p>
+          <p class="lower-line">This template is appropriate for Real Estate
+            Company, who need to do their business online via websites.</p>
+        </div>
+        <!-- .pull-left -->
+        <a class="pull-right btn btn-large btn-realto span3" href="#" title="Buy It Now">Buy
+          It Now!</a>
+      </div>
+      <!-- .adv-message  -->
+    </div>
+  </div>
+</div>
