--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,17 +2,15 @@
   <div class="row">
     <div class="span8">
       <div class="box-container">
-        <div class="cycle-slideshow"
-             data-cycle-fx=fade
-             data-cycle-timeout=0
-             data-cycle-swipe=true
-             data-cycle-pager="#adv-custom-pager"
-             data-cycle-pager-template='<a href="#" ><img src="{{src}}"></a>'
-             data-cycle-prev="#prev"
-             data-cycle-next="#next"
-        >
+        <div class="cycle-slideshow">
 
-          <img alt="image" src="http://placehold.it/770x437" class="media-object">
+
+          <% if @place.image_url.present? %>
+            <%= image_tag @place.image_url %>
+          <% else %>
+              <img alt="image" src="http://placehold.it/770x437" class="media-object">
+          <% end %>
+
 
         </div><!-- .cycle-slideshow -->
         <div id="adv-custom-pager"></div>
