--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -5,11 +5,11 @@
         <div class="padding30">
           <h2 class="page-title">Write a Review</h2>
           <%=  form_for @place do |f| %>
-              <%= f.label :category_id %>
-              <%= f.select :category_id, Category.all.map{ |f| [f.name, f.id] } %>
-
               <%= f.label :name %>
               <%= f.text_field :name %>
+
+              <%= f.label :category_id %>
+              <%= f.select :category_id, Category.all.map{ |f| [f.name, f.id] } %>
 
               <%= f.label :description %>
               <%= f.text_area :description %>
@@ -34,6 +34,8 @@
 
               <%= f.label :email %>
               <%= f.text_field :email %><br />
+
+              <%= f.file_field :image %><br />
 
               <%= f.submit class: "btn span3 btn-realto-form btn-large" %>
           <% end %>
