--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -50,113 +50,61 @@
   <div class="row">
     <div id="realto-carousel" class="carousel slide span12">
       <div class="carousel-navigation pull-right">
-      <a class="serif italic pull-left view-all-carousel" href="#">View all</a>
+        <%= link_to "View all", search_places_path, class: "serif italic pull-left view-all-carousel" %>
       <a class="left carousel-control pull-left" href="#realto-carousel" data-slide="prev">‹</a>
       <a class="right carousel-control pull-right" href="#realto-carousel" data-slide="next">›</a>
       </div>
       <div class="carousel-inner">
         <div class="item active">
           <ul class="thumbnails">
-            <li class="span4 box-container">
-              <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                  <span class="more"></span>
-                  <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Sale</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">379 Michigan Avenue New York 33139 NY</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
+            <% @places.last(3).each do |place| %>
+              <li class="span4 box-container">
+                <div class="holder">
+                  <a class="overlay" title="property title" href="#">
+                    <span class="more"></span>
+                    <% if place.image_url.present? %>
+                        <%= link_to image_tag(place.image_url.to_s), place %>
+                    <% else %>
+                        <%= link_to image_tag("http://placehold.it/370x210"), place  %>
+                    <% end %>
+                  </a>
+                  <div class="prop-info">
+                    <h3 class="prop-title"><%= link_to place.name, place %></h3>
+                    <ul class="more-info clearfix">
+                      <li class="info-label clearfix"><span class="pull-left">Category:</span> <span class="qty pull-right"><%= place.category.name %></span></li>
+                      <li class="info-label clearfix"><span class="pull-left">Location:</span> <span class="qty pull-right"><%= place.city.capitalize %>, <%= place.state.upcase %></span></li>
+                      <li class="info-label clearfix"><span class="pull-left">Phone:</span> <span class="qty pull-right"><%= place.phone %></span></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-            </li>
-            <li class="span4 box-container">
-              <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                  <span class="more"></span>
-                  <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Rent</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">8745 Annox Avenue Orlando 33139 FL</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="span4 box-container">
-              <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                  <span class="more"></span>
-                  <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Sale</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">1630 Washington Avenue Miami Beach 33139 FL</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
+              </li>
+            <% end %>
           </ul>
         </div><!-- .item -->
         <div class="item">
           <ul class="thumbnails">
-            <li class="span4 box-container">
-            <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                <span class="more"></span>
-                <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Rent</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">1290 Collins Avenue Miami Beach 33139 FL</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="span4 box-container">
-            <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                <span class="more"></span>
-                <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Sale</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">6253 Jefferson Avenue Los Angeles 33139 CA</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="span4 box-container">
-            <div class="holder">
-                <a class="overlay" title="property title" href="#">
-                <span class="more"></span>
-                <img alt="image" src="http://placehold.it/370x210" class="media-object">
-                </a>
-                <span class="prop-tag">For Rent</span>
-                <div class="prop-info">
-                  <h3 class="prop-title">7654 West Avenue Miami Beach 33139 FL</h3>
-                  <ul class="more-info clearfix">
-                    <li class="info-label clearfix"><span class="pull-left">Beds:</span> <span class="qty pull-right">4</span></li>
-                    <li class="info-label clearfix"><span class="pull-left">Baths:</span> <span class="qty pull-right">2</span></li>
-                  </ul>
-                </div>
-              </div>
-            </li>
+            <% @places.order(:id).reverse_order.limit(3).offset(3).each do |place| %>
+                <li class="span4 box-container">
+                  <div class="holder">
+                    <a class="overlay" title="property title" href="#">
+                      <span class="more"></span>
+                      <% if place.image_url.present? %>
+                          <%= link_to image_tag(place.image_url.to_s), place %>
+                      <% else %>
+                          <%= link_to image_tag("http://placehold.it/370x210"), place  %>
+                      <% end %>
+                    </a>
+                    <div class="prop-info">
+                      <h3 class="prop-title"><%= link_to place.name, place %></h3>
+                      <ul class="more-info clearfix">
+                        <li class="info-label clearfix"><span class="pull-left">Category:</span> <span class="qty pull-right"><%= place.category.name %></span></li>
+                        <li class="info-label clearfix"><span class="pull-left">Location:</span> <span class="qty pull-right"><%= place.city.capitalize %>, <%= place.state.upcase %></span></li>
+                        <li class="info-label clearfix"><span class="pull-left">Phone:</span> <span class="qty pull-right"><%= place.phone %></span></li>
+                      </ul>
+                    </div>
+                  </div>
+                </li>
+            <% end %>
           </ul>
         </div><!-- .item -->
 
