Place List Homepage 1

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,9 +28,9 @@
       <div class="row">
         <div class="span8">
           <span class="logo-text">
-            <%= link_to "Places", root_path, class: "brand" %>
+            <%= link_to "Friendly Places", root_path, class: "brand" %>
           </span>
-          <span class="tag-line hidden-phone">Friendly Places reviews</span>
+          <span class="tag-line hidden-phone">best reviews of each place</span>
         </div>
         <div class="span4">
           <ul class="inline pull-right">
