--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
     <div class="row">
       <div class="span3">
         <div class="footer-widget">
-          <h2 class="brand widget-title">Realto</h2>
-          <p class="footer-tag-line">Your Company Tag Line</p>
+          <h2 class="brand widget-title">Friendly Places</h2>
+          <p class="footer-tag-line">best reviews of each place</p>
           <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
             magna aliqua adipisicing elit seddo eiusmod tempor.</p>
         </div>
