--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,7 +7,7 @@
             <div class="span12 head-container">
             <div class="row">
               <div class="span8 hidden-phone">
-                <h2 class="head-title">Welcome to Places</h2>
+                <h2 class="head-title">Welcome to Friendly Places</h2>
                 <p class="head-message"><strong>Realto xHTML/CSS Template is The Best Solution To Sell House Online.</strong><br />
                 This template is appropriate for Real Estate Company, who need to do their business online via websites.</p>
                 <%= link_to "Write a Review", new_place_path, class: "btn btn-large btn-realto span3 header-cta" %>
@@ -122,79 +122,56 @@
     <div class="home-bottom-top">
       <div class="span4">
         <div class="info-box">
-          <h2 class="secion-title">Why choose us?</h2>
-          <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
-            magna aliqua adipisicing elit seddo eiusmod tempor.</p>
-          <p>Sed perspiciatis unde omnisiste natus error voluptatem remopa
-            accusantium doloremque laudantium, totam rem aperiam.</p>
+          <h2 class="secion-title">Hotels</h2>
+          <% @places.limit(5).each do |place| %>
+            <ul class="more-info clearfix">
+              <li class="info-label clearfix"><%= link_to place.name, place %>
+                <% if place.reviews.present? %>
+                  <span class="qty pull-right star-rating" data-score=<%= place.reviews.average(:rating).round(2) %>></span>
+                <% else %>
+                  <span class="qty pull-right">No reviews yet</span>
+                <% end %>
+              </li>
+            </ul>
+          <% end %>
           <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
         </div>
       </div>
       <!-- .span4 -->
       <div class="span4">
         <div class="info-box">
-          <h3 class="info-head">Designed for your business</h3>
-          <div class="row clearfix">
-            <div class="pull-left icons hidden-phone">
-              <i class="icon-briefcase"></i>
-            </div>
-            <div class="span3">
-              <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
-                magna aliqua adipisicing elit seddo eiusmod tempor.</p>
-              <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
-            </div>
-          </div>
-          <!-- .clearfix -->
+          <h2 class="secion-title">Hotels</h2>
+          <% @places.limit(5).each do |place| %>
+              <ul class="more-info clearfix">
+                <li class="info-label clearfix"><%= link_to place.name, place %>
+                  <% if place.reviews.present? %>
+                      <span class="qty pull-right star-rating" data-score=<%= place.reviews.average(:rating).round(2) %>></span>
+                  <% else %>
+                      <span class="qty pull-right">No reviews yet</span>
+                  <% end %>
+                </li>
+              </ul>
+          <% end %>
+          <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
         </div>
-        <!-- .info-box -->
-        <div class="info-box">
-          <h3 class="info-head">Ample Customizations</h3>
-          <div class="row clearfix">
-            <div class="pull-left icons hidden-phone">
-              <i class="icon-cogs"></i>
-            </div>
-            <div class="span3">
-              <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
-                magna aliqua adipisicing elit seddo eiusmod tempor.</p>
-              <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
-            </div>
-          </div>
-          <!-- .clearfix -->
-        </div>
-        <!-- .info-box -->
       </div>
       <!-- .span4 -->
       <div class="span4">
         <div class="info-box">
-          <h3 class="info-head">Fully Responsive</h3>
-          <div class="row clearfix">
-            <div class="pull-left icons hidden-phone">
-              <i class="icon-move"></i>
-            </div>
-            <div class="span3">
-              <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
-                magna aliqua adipisicing elit seddo eiusmod tempor.</p>
-              <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
-            </div>
-          </div>
-          <!-- .clearfix -->
+          <h2 class="secion-title">Hotels</h2>
+          <% @places.limit(5).each do |place| %>
+              <ul class="more-info clearfix">
+                <li class="info-label clearfix"><%= link_to place.name, place %>
+                  <% if place.reviews.present? %>
+                      <span class="qty pull-right star-rating" data-score=<%= place.reviews.average(:rating).round(2) %>></span>
+                  <% else %>
+                      <span class="qty pull-right">No reviews yet</span>
+                  <% end %>
+                </li>
+              </ul>
+          <% end %>
+          <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
         </div>
-        <!-- .info-box -->
-        <div class="info-box">
-          <h3 class="info-head">Bootstrap Compatible</h3>
-          <div class="row clearfix">
-            <div class="pull-left icons hidden-phone">
-              <i class="icon-thumbs-up"></i>
-            </div>
-            <div class="span3">
-              <p>Lorem ipsum dolor sit amet consectetur incididunt ut labore et dolore
-                magna aliqua adipisicing elit seddo eiusmod tempor.</p>
-              <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
-            </div>
-          </div>
-          <!-- .clearfix -->
-        </div>
-        <!-- .info-box -->
       </div>
       <!-- .span4 -->
     </div>
