--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -123,7 +123,7 @@
       <div class="span4">
         <div class="info-box">
           <h2 class="secion-title">Hotels</h2>
-          <% @places.limit(5).each do |place| %>
+          <% @hotels.limit(5).each do |place| %>
             <ul class="more-info clearfix">
               <li class="info-label clearfix"><%= link_to place.name, place %>
                 <% if place.reviews.present? %>
@@ -134,14 +134,14 @@
               </li>
             </ul>
           <% end %>
-          <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
+          <%= link_to "Continue &raquo".html_safe, hotels_path, class: "serif italic" %>
         </div>
       </div>
       <!-- .span4 -->
       <div class="span4">
         <div class="info-box">
-          <h2 class="secion-title">Hotels</h2>
-          <% @places.limit(5).each do |place| %>
+          <h2 class="secion-title">Restaraunts</h2>
+          <% @restaurants.limit(5).each do |place| %>
               <ul class="more-info clearfix">
                 <li class="info-label clearfix"><%= link_to place.name, place %>
                   <% if place.reviews.present? %>
@@ -152,14 +152,14 @@
                 </li>
               </ul>
           <% end %>
-          <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
+          <%= link_to "Continue &raquo".html_safe, restaurants_path, class: "serif italic" %>
         </div>
       </div>
       <!-- .span4 -->
       <div class="span4">
         <div class="info-box">
-          <h2 class="secion-title">Hotels</h2>
-          <% @places.limit(5).each do |place| %>
+          <h2 class="secion-title">Cafes</h2>
+          <% @cafes.limit(5).each do |place| %>
               <ul class="more-info clearfix">
                 <li class="info-label clearfix"><%= link_to place.name, place %>
                   <% if place.reviews.present? %>
@@ -170,7 +170,7 @@
                 </li>
               </ul>
           <% end %>
-          <a class="serif italic" href="#" title="Continue">Continue &raquo;</a>
+          <%= link_to "Continue &raquo".html_safe, cafes_path, class: "serif italic" %>
         </div>
       </div>
       <!-- .span4 -->
