--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -16,7 +16,12 @@
         <div id="adv-custom-pager"></div>
         <div class="clearfix">
           <div class="clearfix padding30">
-            <h2 class="prop-title pull-left margin0"><%= @place.name %></h2>
+            <h2 class="prop-title pull-left margin0"><%= @place.name %>
+              <% if current_user.try(:admin?) %>
+                <small><%= link_to "Edit", edit_place_path, class: "btn btn-primary btn-mini" %></small>
+                <small><%= link_to "Delete", place_path, method: :delete, data: {confirm: "Are you sure you want to do it?"}, class: "btn btn-danger btn-mini" %></small>
+              <% end %>
+            </h2>
             <span class="prop-price pull-right serif italic star-rating" data-score=<%= @avg_rating %>></span>
           </div>
           <div class="clearfix padding030 row-fluid">
