--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -294,7 +294,7 @@ a.brand {
 	padding: 30px 30px 30px 0;
 }
 .prop-tag {
-    background: none repeat scroll 0 0 #252525;
+    background: none repeat scroll 0 0 #5fb000;
     color: #FFFFFF;
     left: 0;
     padding: 7px 10px;
