--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -7,16 +7,11 @@
           <ul class="unstyled">
             <li>
               <i class="icon-envelope-alt"></i>
-              Email: realto@realto.com</li>
+              Email: friendlyplacesapp@gmail.com</li>
             <li>
               <i class="icon-phone"></i>
-              Phone: +1 786 345 6789</li>
+              Phone: +1 555 347 7557</li>
             <li>
-              <i class="icon-linkedin"></i>
-              linkedin.com/realto</li>
-            <li>
-              <i class="icon-twitter"></i>
-              twitter.com/realto</li>
           </ul>
           <div class="row-fluid">
             <form action="#" class="margin300" method="post">
@@ -35,11 +30,9 @@
     <div class="span4 widget">
       <div class="widget map box-container padding30">
         <h3 class="widget-title">Get Directions</h3>
-        <iframe src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=miami+beach+collins+ave+1220&amp;aq=&amp;sll=25.861386,-80.120888&amp;sspn=0.205136,0.347786&amp;ie=UTF8&amp;hq=&amp;hnear=1220+Collins+Ave,+Miami+Beach,+Miami-Dade,+Florida+33139,+Stati+Uniti&amp;t=m&amp;z=14&amp;ll=25.783255,-80.131265&amp;output=embed"></iframe>
-        <dl class="margin0">
-          <dt>Realto</dt>
-          <dd class="margin0">1680 Washington Avenue</dd>
-          <dd class="margin0">Miami Beach, FL 33139</dd>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17128.53655222598!2d-74.01412112828143!3d40.70857050220598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259891145f659%3A0x190aa09d4dbea863!2s421+Broome+St%2C+New+York%2C+NY+10013!5e0!3m2!1sen!2sus!4v1486071232450" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <dd class="margin0">421 Broome Street</dd>
+          <dd class="margin0">New York, NY 10013</dd>
         </dl>
       </div>
     </div>
