--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container page-content">
   <div class="row">
-    <div class="span8">
+    <div class="span12">
       <div class="box-container">
-        <div class="padding30">
-          <h2 class="page-title">Write a Review</h2>
+        <div style="margin-left: auto; margin-right: auto; width: 16em">
+          <h2 class="page-title", style="text-align: center">Create a Place</h2>
           <%=  form_for @place do |f| %>
               <%= f.label :name %>
               <%= f.text_field :name %>
@@ -29,12 +29,16 @@
               <%= f.label :zipcode %>
               <%= f.text_field :zipcode %>
 
+              <!--<%= f.label :country %>-->
+              <!--<%= f.text_field :country %>-->
+
               <%= f.label :phone %>
               <%= f.text_field :phone %>
 
               <%= f.label :email %>
               <%= f.text_field :email %><br />
 
+              <%= f.label :image %>
               <%= f.file_field :image %><br />
 
               <%= f.submit class: "btn span3 btn-realto-form btn-large" %>
@@ -42,21 +46,5 @@
         </div>
       </div>
     </div>
-    <!-- .span8 -->
-    <div class="span4 widget">
-      <div class="widget map box-container padding30">
-        <h3 class="widget-title">Get Directions</h3>
-        <iframe src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=miami+beach+collins+ave+1220&amp;aq=&amp;sll=25.861386,-80.120888&amp;sspn=0.205136,0.347786&amp;ie=UTF8&amp;hq=&amp;hnear=1220+Collins+Ave,+Miami+Beach,+Miami-Dade,+Florida+33139,+Stati+Uniti&amp;t=m&amp;z=14&amp;ll=25.783255,-80.131265&amp;output=embed"></iframe>
-        <dl class="margin0">
-          <dt>Realto</dt>
-          <dd class="margin0">1680 Washington Avenue</dd>
-          <dd class="margin0">Miami Beach, FL 33139</dd>
-        </dl>
-      </div>
-    </div>
-    <!-- .span4 -->
   </div>
-  <!-- .row -->
 </div>
-<!-- .container -->
-
