--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,8 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="span3">
+      <div class="span1"></div>
+      <div class="span4">
         <div class="footer-widget">
           <h2 class="brand widget-title">Friendly Places</h2>
           <p class="footer-tag-line">best reviews of each place</p>
@@ -19,14 +20,14 @@
             <ul>
               <li class="clearfix">
                 <i class="icon-map-marker pull-left"></i>
-                <p class="pull-left">1680 Washington Avenue
-                  <br/>Miami Beach 33139 FL</p></li>
+                <p class="pull-left">421 Broome Street
+                  <br/>New York, NY 10013</p></li>
               <li class="clearfix">
                 <i class="icon-phone pull-left"></i>
-                <p class="pull-left">+1 (800) 765 4321</p></li>
+                <p class="pull-left">+1 555 347 7557</p></li>
               <li class="clearfix">
                 <i class="icon-envelope-alt pull-left"></i>
-                <p class="pull-left"><a href="#">realto@realto.com</a></p>
+                <p class="pull-left"><a href="#">friendlyplacesapp@gmail.com</a></p>
               </li>
             </ul>
           </div>
@@ -41,44 +42,22 @@
           <ul>
             <li>
               <i class="icon-caret-right"></i>
-              <a title="Home" href="#">Home</a></li>
+              <%= link_to "Home", root_path %></li>
             <li>
               <i class="icon-caret-right"></i>
-              <a title="About Us" href="#">About Us</a></li>
+              <%= link_to "Write a Review", new_place_path %></li>
+
             <li>
               <i class="icon-caret-right"></i>
-              <a title="Properties" href="#">Properties</a></li>
+              <%= link_to "View all", search_places_path %></li>
+
             <li>
               <i class="icon-caret-right"></i>
-              <a title="Agents" href="#">Agents</a></li>
+              <%= link_to "About us", about_us_path %></li>
             <li>
               <i class="icon-caret-right"></i>
-              <a title="Blog" href="#">Blog</a></li>
-            <li>
-              <i class="icon-caret-right"></i>
-              <a title="Financing" href="#">Financing</a></li>
-            <li>
-              <i class="icon-caret-right"></i>
-              <a title="Contact Us" href="#">Contact Us</a></li>
+              <%= link_to "Contact us", contact_us_path %></li>
           </ul>
-        </div>
-        <!-- .footer-widget -->
-      </div>
-      <!-- .span3 -->
-      <div class="span3">
-        <div class="footer-widget">
-          <h3 class="widget-title">Flickr</h3>
-          <div class="flickr-widget">
-            <ul>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-              <li class="pull-left"><a title="image" href="#"><img alt="" class="media-object" src="http://placehold.it/70x70"></a></li>
-            </ul>
-          </div>
-          <!-- .flickr-widget -->
         </div>
         <!-- .footer-widget -->
       </div>
