--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,7 @@
         <div class="span4">
           <ul class="inline pull-right">
             <% if user_signed_in? %>
+                <li>Hello, <%= current_user.first_name %> <%= current_user.last_name %></li>
                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                 <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
             <% else %>
