--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,6 +1,7 @@
 <div class="container page-content">
   <div class="row">
-    <div class="span8">
+    <div class="span1"></div>
+    <div class="span6">
       <div class="box-container">
         <div class="padding30">
           <h2 class="page-title">Write a Review</h2>
@@ -29,6 +30,9 @@
               <%= f.label :zipcode %>
               <%= f.text_field :zipcode %>
 
+              <!--<%= f.label :country %>-->
+              <!--<%= f.text_field :country %>-->
+
               <%= f.label :phone %>
               <%= f.text_field :phone %>
 
@@ -46,11 +50,11 @@
     <div class="span4 widget">
       <div class="widget map box-container padding30">
         <h3 class="widget-title">Get Directions</h3>
-        <iframe src="http://maps.google.it/maps?f=q&amp;source=s_q&amp;hl=it&amp;geocode=&amp;q=miami+beach+collins+ave+1220&amp;aq=&amp;sll=25.861386,-80.120888&amp;sspn=0.205136,0.347786&amp;ie=UTF8&amp;hq=&amp;hnear=1220+Collins+Ave,+Miami+Beach,+Miami-Dade,+Florida+33139,+Stati+Uniti&amp;t=m&amp;z=14&amp;ll=25.783255,-80.131265&amp;output=embed"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12081.47821202897!2d<%= @place.longitude %>!3d<%= @place.latitude %>!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1486005356559" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <dl class="margin0">
-          <dt>Realto</dt>
-          <dd class="margin0">1680 Washington Avenue</dd>
-          <dd class="margin0">Miami Beach, FL 33139</dd>
+          <dt><%= @place.name %></dt>
+          <dd class="margin0"><%= @place.address1 %> <%= @place.address2 %></dd>
+          <dd class="margin0"><%= @place.city %>, <%= @place.state %> <%= @place.zipcode %></dd>
         </dl>
       </div>
     </div>
