--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,18 +8,17 @@
             <div class="row">
               <div class="span8 hidden-phone">
                 <h2 class="head-title">Welcome to Friendly Places</h2>
-                <p class="head-message"><strong>Realto xHTML/CSS Template is The Best Solution To Sell House Online.</strong><br />
-                This template is appropriate for Real Estate Company, who need to do their business online via websites.</p>
-                <%= link_to "Write a Review", new_place_path, class: "btn btn-large btn-realto span3 header-cta" %>
+                <p class="head-message">Choose only a friendly place. Always</p><br>
+                <%= link_to "Create new Place", new_place_path, class: "btn btn-large btn-realto span3 header-cta" %>
               </div>
               <div class="span4" style="padding-bottom: 100px">
                 <div class="search-form">
-                  <p>Find your place</p>
+                  <p>Find a friendly place</p>
                   <%= form_tag search_places_path, method: :get do |f| %>
                       <%= text_field_tag :search, nil, placeholder: "palace, italian, beer, etc." %>
                       <%= text_field_tag :location, nil, placeholder: "denver, paris, etc." %>
                       <%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}) %>
-                      <%= submit_tag 'Search', class: "btn btn-realto span2" %>
+                      <%= submit_tag 'Search', class: "btn btn-realto span2"  %>
                   <% end %>
                 </div>
                 <!-- .search-form -->
@@ -182,113 +181,5 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="span12 box-container">
-      <div class="row adv-message clearfix">
-        <div class="pull-left span7">
-          <p class="upper-line serif italic">Realto xHTML/CSS Template is The
-            Best Solution To Sell House Online</p>
-          <p class="lower-line">This template is appropriate for Real Estate
-            Company, who need to do their business online via websites.</p>
-        </div>
-        <!-- .pull-left -->
-        <a class="pull-right btn btn-large btn-realto span3" href="#" title="Buy It Now">Buy
-          It Now!</a>
-      </div>
-      <!-- .adv-message  -->
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="span8">
-      <h2 class="secion-title">Meet our agents</h2>
-      <div class="row">
-        <div class="span2">
-          <div class="home-agents widget">
-            <a class="overlay" href="#" title="agent name">
-              <span class="more"></span>
-              <img alt="image" src="http://placehold.it/170x170" class="media-object">
-            </a>
-            <p class="home-agent-name">John Doe</p>
-            <a class="serif italic" href="#" title="View profile page">View profile
-              page &raquo;</a>
-          </div>
-          <!-- .home-agents -->
-        </div>
-        <div class="span2">
-          <div class="home-agents widget">
-            <a class="overlay" href="#" title="agent name">
-              <span class="more"></span>
-              <img alt="image" src="http://placehold.it/170x170" class="media-object">
-            </a>
-            <p class="home-agent-name">Susan Underwood</p>
-            <a class="serif italic" href="#" title="View profile page">View profile
-              page &raquo;</a>
-          </div>
-          <!-- .home-agents -->
-        </div>
-        <div class="span2">
-          <div class="home-agents widget">
-            <a class="overlay" href="#" title="agent name">
-              <span class="more"></span>
-              <img alt="image" src="http://placehold.it/170x170" class="media-object">
-            </a>
-            <p class="home-agent-name">Erik Peterson</p>
-            <a class="serif italic" href="#" title="View profile page">View profile
-              page &raquo;</a>
-          </div>
-          <!-- .home-agents -->
-        </div>
-        <div class="span2">
-          <div class="home-agents widget">
-            <a class="overlay" href="#" title="agent name">
-              <span class="more"></span>
-              <img alt="image" src="http://placehold.it/170x170" class="media-object">
-            </a>
-            <p class="home-agent-name">Lu Jackson</p>
-            <a class="serif italic" href="#" title="View profile page">View profile
-              page &raquo;</a>
-          </div>
-          <!-- .home-agents -->
-        </div>
-      </div>
-    </div>
-    <!-- .span8  -->
-    <div class="span4">
-      <div class="home-blog-articles widget">
-        <h2 class="secion-title">Articles from the Blog</h2>
-        <ul>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Lorem ipsum dolor sit amet, consectetur
-              adipiscing</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Duis suscipit venenatis pellentesque tempor
-              libero</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Etiam aliquet aliquam metus in tristique</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Cras venenatis pellentesque venenatis
-              pellentesque</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Vivamus vitae venenatis pellentesque nunc sed
-              nisl</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">In tempus venenatis pellentesquetempor</a></li>
-          <li>
-            <i class="icon-caret-right"></i>
-            <a title="title" href="#">Suspendisse vulputate venenatis pellentesque
-              quis</a></li>
-        </ul>
-      </div>
-    </div>
-    <!-- .span4  -->
-  </div>
-</div>
+
+
