--- a/app/views/pages/cafes.html.erb
+++ b/app/views/pages/cafes.html.erb
@@ -16,6 +16,11 @@
                           <%= link_to image_tag("http://placehold.it/370x210"), place  %>
                       <% end %>
                     </a>
+                    <% if place.reviews.present? %>
+                        <span class="prop-tag star-rating" data-score=<%= place.reviews.average(:rating).round(2) %>></span>
+                    <% else %>
+                        <span class="prop-tag">No reviews yet</span>
+                    <% end %>
                     <div class="prop-info">
                       <h3 class="prop-title"><%= link_to place.name, place_path(place) %></h3>
                       <ul class="more-info clearfix">
