--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -24,16 +24,8 @@
             <ul class="more-info pull-left span6">
               <li class="info-label clearfix"><span class="pull-left">Category:</span>
                 <span class="qty pull-right"><%= @place.category.name %></span></li>
-              <li class="info-label clearfix"><span class="pull-left">Website:</span>
-                <span class="qty pull-right">www.place.com</span></li>
               <li class="info-label clearfix"><span class="pull-left">Description:</span>
                 <span class="qty pull-right"><%= @place.description %></span></li>
-            </ul>
-            <ul class="more-info pull-right span6">
-              <li class="info-label clearfix"><span class="pull-left">Phone:</span>
-                <span class="qty pull-right"><%= @place.phone %></span></li>
-              <li class="info-label clearfix"><span class="pull-left">Email:</span>
-                <span class="qty pull-right"><%= @place.email %></span></li>
               <li class="info-label clearfix"><span class="pull-left">Address:</span>
                 <span class="qty pull-right">
                   <%= @place.address1 %>
@@ -43,6 +35,14 @@
                   <%= @place.zipcode %>
                 </span>
               </li>
+            </ul>
+            <ul class="more-info pull-right span6">
+              <li class="info-label clearfix"><span class="pull-left">Phone:</span>
+                <span class="qty pull-right"><%= @place.phone %></span></li>
+              <li class="info-label clearfix"><span class="pull-left">Email:</span>
+                <span class="qty pull-right"><%= @place.email %></span></li>
+              <li class="info-label clearfix"><span class="pull-left">Website:</span>
+                <span class="qty pull-right"><%= @place.website %></span></li>
             </ul>
           </div>
           <div class="clearfix padding30">
